# neural-fields-rbf

./: .gitignore  LICENSE  README.md  demo.ipynb  example_notbook.ipynb  geodesic.py  pyproject.toml  test.html
Manuscript/: damacros.sty  manuscript.tex  references.bib
Resources/: quadrature_notes.html
Simulations/: neural_field_planar_grid.py
Simulations/drivers/: cartesian_convergence.py  convergence_unit_square.py  fd_1D_driver.py  fd_2D_driver.py  hermite_bump.py  interpolation_driver.py  mesh_test.py  qf_2D.py  qf_global.py  qf_local.py  rbf_qf_code_generator.py  set_path.py  surface.py  triangle_decomp.py
Simulations/neural_fields/: firing_rate.py  grid.py  kernels.py  scattered.py
Simulations/rbf/: finite_differences.py  geometry.py  interpolate.py  linear_functional.py  poly2D.py  poly_triangle_integrate_lib.py  poly_triangle_integrate_lib_gen.py  poly_utils.py  quad_lib.py  quad_lib_gen.py  quadrature.py  rbf.py  stencil.py  surface.py
Simulations/time_integrator/: __init__.py  (+1 more)
figures/: README.md  bumpy_sphere_figure.py  flat_convergence_figure.py  flat_hex_quad_convergence_data.py  flat_quad_convergence.py  flat_quad_convergence_data.py  flat_quad_convergence_figure.py  flat_quad_space.py  human_cortex_figure.py  stencil.py  sup_cyclide_convergence_figure.py  sup_hex_convergence_figure.py  sup_sphere_convergence_figure.py  surface_labyrinth.py  torus_convergence_figure.py  utils.py
neural_fields/: cartesian.py  scattered.py
rbf/: interpolate.py  quad_lib.py  quad_lib.py.backup  quad_lib_gen.py  quadrature.py  rbf.py  stencil.py  surface.py
(+776 files in other folders)
